--- a/scroll text using CSS/styles.css
+++ b/scroll text using CSS/styles.css
@@ -23,6 +23,14 @@ body {
     flex-direction: column;
 }
 
+h1 {
+    font-family: "Poppins";
+    font-size: 3rem;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
 .scroll-reveal {
     font-family: "Poppins";
     padding: 50px;
@@ -48,6 +56,7 @@ body {
     animation-range-start: cover 20vh;
     animation-range-end: cover 50vh;
 }
+
 @keyframes scroll-ani {
     to {
         background-size: 100% 100%;
