--- a/dark mode/styles.css
+++ b/dark mode/styles.css
@@ -21,7 +21,9 @@ body {
 	--bg-color: black;
 	background: var(--bg-color);
 	appearance: none;
-	transition: all 900ms ease-in-out;
+	transition: height 900ms cubic-bezier(0.54, -0.09, 0.73, 0.49),
+		width 900ms cubic-bezier(0.54, -0.09, 0.73, 0.49),
+		border-radius 1000ms cubic-bezier(0.54, -0.09, 0.73, 0.49);
 }
 
 #switch:checked {
@@ -39,7 +41,8 @@ body {
 	width: 80px;
 	padding: 10px;
 	background-image: url('./assets/moon.svg');
-	transition: all 900ms ease-in-out;
+	transition: all 900ms cubic-bezier(0.35, -0.82, 0.5, 1.27);
+	cursor: pointer;
 }
 
 #switch:checked ~ #switch-icon {
@@ -47,12 +50,16 @@ body {
 	rotate: 360deg;
 }
 
-h1 {
-	color: black;
+main {
+	--fontColor: #000;
 }
 
-#switch:checked ~ h1 {
-	color: white;
+#switch:checked ~ main {
+	--fontColor: #fff;
+}
+
+h1 {
+	color: var(--fontColor);
 }
 
 h1 {
@@ -63,4 +70,5 @@ h1 {
 	margin: 0;
 	padding: 0;
 	transition: all 900ms ease-in-out;
+	font-size: 65px;
 }
